Removes html from bio.

--- a/Members.html
+++ b/Members.html
@@ -96,7 +96,7 @@
 		<a href="#" class="image left"><img src="images/officers/jha.jpg" alt="" /></a>
 		<div class="inner">
 			<h3>Joshua Harris</h3>
-			<p style="font-size: 100%">Joshua Harris is a senior in Old Dominion University’s undergraduate computer science program. Joshua has close to a year of real world work experience through internships as a NASA LITES intern and developer at &lt;a href=&#39;https://www.forrent.com&#39; target=&#39;_blank&#39;&gt;ForRent.com&lt;/a&gt;. Joshua is passionate about building applications with great user experiences, and open source projects. Currently, Joshua volunteers his skills for his local Code for America brigade, building a new client for citizens to learn about candidates for local government.</p>
+			<p style="font-size: 100%">Joshua Harris is a senior in Old Dominion University’s undergraduate computer science program. Joshua has close to a year of real world work experience through internships as a NASA LITES intern and developer at ForRent.com. Joshua is passionate about building applications with great user experiences, and open source projects. Currently, Joshua volunteers his skills for his local Code for America brigade, building a new client for citizens to learn about candidates for local government.</p>
 		</div>
 	</div>
 </section>
