--- a/Members.html
+++ b/Members.html
@@ -156,7 +156,7 @@
 		<a href="#" class="image left"><img src="images/officers/Nick.jpg" alt="" /></a>
 		<div class="inner">
 			<h3>Nikolaus Barnhill</h3>
-			<p style="font-size: 100%">I got into programming by being part of a robotics team. The experience fueled my passion for Science, Technology, Engineering, and Math, and now I&#39;m part of the amazing Computer Science program here at ODU.</p>
+			<p style="font-size: 100%">Nikolaus Barnhill is and undergrad at ODU majoring in computer science. He was first exposed to programming during his time as a robotics team member and has since had a passion for Science Technology, Engineering, and Math.</p>
 		</div>
 	</div>
 </section>
