--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	<ul>
 		<li class=" current "><a href="index.html">Home</a></li>
 		<li class=""><a href="Members.html">Officers</a></li>
+		<li class=""><a href="Schedule.html">Schedule</a></li>
 		
 		
 	</ul>
