adds thank you page.

--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
               </div>
             </div>
             <input type="text" name="_gotcha" style="display:none" />
+            <input type="hidden" name="_next" value="//cs.odu.edu/~acm/hackathon2017/thanks.html" />
+            <input type="hidden" name="_subject" value="Hackathon Site Submission" />
           </form>
         </section>
       </div>
